--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -73,7 +73,7 @@
             android:text="Login" />
 
         <Button
-            android:id="@+id/button3"
+            android:id="@+id/button_brower"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/button_login"
@@ -85,7 +85,7 @@
             android:id="@+id/button4"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/button3"
+            android:layout_below="@+id/button_brower"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="10dp"
             android:text="Scroll" />
